# simplex-chat-rs

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
simplex-chat/: Cargo.toml
simplex-chat/src/: lib.rs  response.rs  responses.rs  types.rs
