[package]
name = "simplex-chat"
version = "0.1.0"
edition = "2021"
authors = ["rdbo"]
description = "API for the SimpleX Chat CLI"
readme = "../README.md"
homepage = "https://github.com/rdbo/simplex-chat-rs"
repository = "https://github.com/rdbo/simplex-chat-rs"
license = "AGPL-3.0-only"
keywords = ["chat", "bot", "simplex", "client", "api"]
categories = ["web-programming::websocket", "asynchronous", "api-bindings"]

[dependencies]
anyhow = "1.0.93"
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt", "net", "sync"] }
tokio-tungstenite = "0.24.0"
